proxima-macros/tests/ui/pipe_unpin_on_async_fn.stderr
error: #[proxima::pipe(unpin)] cannot be applied to an `async fn` as-is: its body compiles to a compiler-generated state machine, which is `!Unpin`, so it can't be polled in place. Three ways to get an `Unpin` pipe here, in order of cost: (1) use a plain `fn` instead — `#[proxima::pipe]` wraps its return in `core::future::ready`, whose future IS `Unpin`, for free; (2) hand-write the `Future` as an `Unpin` poll struct that still returns `Poll::Pending` and registers a waker — `Unpin` constrains how the future is spelled, not whether it awaits; see `proxima_primitives::pipe::signal_source::SignalCall` for a worked example; or (3) keep this `async fn` and pay one allocation per call with `#[proxima::pipe(unpin, boxed)]`.
 --> tests/ui/pipe_unpin_on_async_fn.rs:6:1
  |
6 | async fn bad(input: u64) -> Result<u64, std::convert::Infallible> {
  | ^^^^^
